# ce50731

./: pyproject.toml
ce_50731/: servei.py
models/: decision_tree.pkl  dict_vectorizer.pkl  knn.pkl  logistic_regression.pkl  random_forest.pkl  scaler.pkl  svm.pkl  vectorizer.pkl
notebooks/: classificacio.ipynb  classificacio_propia.ipynb  client.ipynb
