[tool.poetry]
name = "ce-50731"
version = "0.1.0"
description = ""
authors = ["Lluc Marquès <llucmk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scikit-learn = "^1.6.0"
pandas = "^2.2.3"
ipykernel = "^6.29.5"
notebook = "^7.3.2"
jupyter-client = "^8.6.3"
seaborn = "^0.13.2"
flask = "^3.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
